--- a/index.html
+++ b/index.html
@@ -1,75 +1,79 @@
 <?php
-
 session_start();
-
 require_once('clases/alumno.php');
 
+// Comprobamos si el usuario ya inició sesión
 if (isset($_SESSION['usuarioingresado'])) {
-  header('location: menu_user.php');
+    header('location: menu_user.php');
+    exit; // Salir del script para evitar que se siga ejecutando
 }
-
-?>
-
-<html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Terciario Login</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body class="index1">
-  <h2>Esc. Superior N.º 49 “Cap. Gral. J.J. Urquiza"</h2>
-  <div class="caja1">
-    <form method="post">
-      <div class="formtlo">
-        <img src="assets/image/logo.png" alt="Logo Urquiza" class="logo1">
-      </div>
-      <div class="divSombra">
-        <div>
-          <input type="text" name="txtdni" placeholder="&#128273; DNI">
-          <input type="password" name="txtpassword" id="txtpassword" placeholder="&#128274; Contraseña">
-        </div>
-        <div class="checkbox1">
-          <input type="checkbox" onclick="verpassword()"> Mostrar contraseña
-        </div>
-      </div>
-
-      <div align="center">
-        <input type="submit" value="Ingresar" class="btnIndex" name="btningresar">
-        <a href="alumno_registrar.php" class="btnIndex">Registrar</a>
-      </div>
-    </form>
-  </div>
-
-</body>
-
-<script>
-  function verpassword() {
-    var tipo = document.getElementById("txtpassword");
-    tipo.type = (tipo.type === "password") ? "text" : "password";
-  }
-</script>
-
-</html>
-
-<?php
 
 $alumno = new Alumno();
 
 if (isset($_POST['btningresar'])) {
-  $DNI = $_POST["txtdni"];
-  $pass = $_POST["txtpassword"];
+    // Sanitizamos y obtenemos los datos del formulario
+    $DNI = filter_input(INPUT_POST, 'txtdni', FILTER_SANITIZE_STRING);
+    $pass = filter_input(INPUT_POST, 'txtpassword', FILTER_SANITIZE_STRING);
 
-  $alumno->get($DNI);
+    // Buscamos al alumno por DNI
+    $alumno->get($DNI);
 
-  if ($alumno->verificarPassword($pass)) {
-    $_SESSION['usuarioingresado'] = $DNI;
-    header("Location: menu_user.php");
-  } else {
-    echo "<script> alert('Usuario o contraseña incorrecto.');window.location= 'index.php' </script>";
-  }
+    // Verificamos la contraseña utilizando password_verify()
+    if ($alumno->verificarPassword($pass)) {
+        // Iniciamos la sesión y redirigimos al usuario
+        $_SESSION['usuarioingresado'] = $DNI;
+        header("Location: menu_user.php");
+        exit;
+    } else {
+        $error_message = 'Usuario o contraseña incorrecto.';
+    }
 }
-
 ?>
+
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Terciario Login</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body class="index1">
+<h2>Esc. Superior N.º 49 “Cap. Gral. J.J. Urquiza"</h2>
+<div class="caja1">
+    <form method="post">
+        <div class="formtlo">
+            <img src="assets/image/logo.png" alt="Logo Urquiza" class="logo1">
+        </div>
+        <div class="divSombra">
+            <div>
+                <input type="text" name="txtdni" placeholder="&#128273; DNI">
+                <input type="password" name="txtpassword" id="txtpassword" placeholder="&#128274; Contraseña">
+            </div>
+            <div class="checkbox1">
+                <input type="checkbox" onclick="verpassword()"> Mostrar contraseña
+            </div>
+        </div>
+
+        <div align="center">
+            <input type="submit" value="Ingresar" class="btnIndex" name="btningresar">
+            <a href="alumno_registrar.php" class="btnIndex">Registrar</a>
+        </div>
+    </form>
+
+    <?php
+    // Mostramos el mensaje de error si existe
+    if (isset($error_message)) {
+        echo '<p style="color:red; text-align:center;">' . $error_message . '</p>';
+    }
+    ?>
+</div>
+
+<script>
+    function verpassword() {
+        var tipo = document.getElementById("txtpassword");
+        tipo.type = (tipo.type === "password") ? "text" : "password";
+    }
+</script>
+</body>
+</html>
